// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render visible banner, with custom theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ccc",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="polite"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#00f",
                },
              ],
            ]
          }
        >
          Custom theme
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 0,
              "elevation": 0,
              "margin": 4,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      Object {
                        "letterSpacing": 1,
                      },
                      false,
                      Object {
                        "marginHorizontal": 8,
                      },
                      Object {
                        "textTransform": "uppercase",
                      },
                      Object {
                        "color": "#043",
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders hidden banner, without action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "translateY": -0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="none"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and with image 1`] = `
<View
  image={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="polite"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 0,
              "elevation": 0,
              "margin": 4,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      Object {
                        "letterSpacing": 1,
                      },
                      false,
                      Object {
                        "marginHorizontal": 8,
                      },
                      Object {
                        "textTransform": "uppercase",
                      },
                      Object {
                        "color": "#6200ee",
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="polite"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 0,
              "elevation": 0,
              "margin": 4,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      Object {
                        "letterSpacing": 1,
                      },
                      false,
                      Object {
                        "marginHorizontal": 8,
                      },
                      Object {
                        "textTransform": "uppercase",
                      },
                      Object {
                        "color": "#6200ee",
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 0,
              "elevation": 0,
              "margin": 4,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      Object {
                        "letterSpacing": 1,
                      },
                      false,
                      Object {
                        "marginHorizontal": 8,
                      },
                      Object {
                        "textTransform": "uppercase",
                      },
                      Object {
                        "color": "#6200ee",
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                second
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and with image 1`] = `
<View
  image={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="polite"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          accessibilityLiveRegion="polite"
          accessibilityRole="alert"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "flex": 1,
                  "margin": 8,
                },
                Object {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;
